--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.91"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
 clipboard = "0.5.0"
 syntect = "5.0.0"
+crossbeam-channel = "0.5"
