--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,64 @@
+name: Release
+
+permissions:
+  contents: write
+
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - v[0-9]+.*
 
 jobs:
-  release:
-    name: release ${{ matrix.target }}
-    runs-on: ubuntu-latest
+  build:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - target: x86_64-pc-windows-gnu
-            archive: zip
-          - target: x86_64-unknown-linux-musl
-            archive: tar.gz tar.xz tar.zst
-          - target: x86_64-apple-darwin
-            archive: zip
+        package: [ web, deploy ]
+        settings:
+          - host: macos-latest
+            target: aarch64-apple-darwin
+          - host: windows-latest
+            suffix: .exe
+            target: x86_64-pc-windows-msvc
+    name: build melt-${{ matrix.package }}-${{ matrix.settings.target }}
+    runs-on: ${{ matrix.settings.host }}
     steps:
       - uses: actions/checkout@master
-      - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions-rs/toolchain@v1
         with:
-          RUSTTARGET: ${{ matrix.target }}
-          ARCHIVE_TYPES: ${{ matrix.archive }}
+          toolchain: stable
+          target: ${{ matrix.settings.target }}
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release
+      - name: Archive Release
+        uses: thedoctor0/zip-release@main
+        with:
+          type: 'zip'
+          directory: ./target/release
+          path: melt-${{ matrix.package }}${{ matrix.settings.suffix }}
+          filename: melt-${{ matrix.package }}-${{ matrix.settings.target }}.zip
+      #      - name: Display structure of Upload files
+      #        run: ls -R
+      #      - name: Zip artifact
+      #        run: zip -j melt-${{ matrix.package }}-${{ matrix.target }} ./target/release/melt-${{ matrix.package }}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: melt-${{ matrix.package }}-${{ matrix.settings.target }}${{ matrix.settings.suffix }}
+          path: ./target/release/melt-${{ matrix.package }}-${{ matrix.settings.target }}.zip
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - uses: actions/download-artifact@v3
+      #      - name: Display structure of downloaded files
+      #        run: ls -R
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: 'melt-*/*.zip'
+          prerelease: true
+          token: ${{ secrets.GITHUB_TOKEN }}
