--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
+#melt-rs = { path = "../melt-rs" }
 druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
@@ -16,3 +17,4 @@ syntect = "5.0.0"
 crossbeam-channel = "0.5"
 num_cpus = "1.15.0"
 jsonptr = "0.1.5"
+lazy_static = "1.4.0"
