--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
-melt-rs = { path = "../melt-rs" }
+melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
+#melt-rs = { path = "../melt-rs" }
 druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
