--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
-melt-rs = { path = "../melt-rs" }
+melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
+#melt-rs = { path = "../melt-rs" }
 druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
 clipboard = "0.5.0"
 crossbeam-channel = "0.5"
-num_cpus = "1.15.0"
 jsonptr = "0.1.5"
 lazy_static = "1.4.0"
