--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,7 @@ uuid = { version = "1.2.2", features = ["serde", "v4"] }
 clipboard = "0.5.0"
 crossbeam-channel = "0.5"
 jsonptr = "0.1.5"
-lazy_static = "1.4.0"
+rocksdb = {version=  "0.19.0", default-features=false, features = ["lz4"] }
+dirs = "4.0"
+bincode = "1.3.3"
+rayon = "1.6.1"
