--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
-melt-rs = { path = "../melt-rs" }
+melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
+#melt-rs = { path = "../melt-rs" }
 druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
@@ -15,7 +15,7 @@ uuid = { version = "1.2.2", features = ["serde", "v4"] }
 clipboard = "0.5.0"
 crossbeam-channel = "0.5"
 jsonptr = "0.1.5"
-rocksdb = {version=  "0.19.0", default-features=false, features = ["lz4"] }
+rocksdb = {version=  "0.19.0" }
 dirs = "4.0"
 bincode = "1.3.3"
 rayon = "1.6.1"
