--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,9 @@ rocksdb = {version=  "0.19.0" }
 dirs = "4.0"
 bincode = "1.3.3"
 rayon = "1.6.1"
+num_cpus = "1.14.0"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
