--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ bincode = "1.3.3"
 rayon = "1.6.1"
 num_cpus = "1.14.0"
 num-format = "0.4.4"
+human_bytes = { version = "0.4", default-features = false }
 
 [profile.release]
 lto = true
