--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ jsonptr = "0.1.5"
 rocksdb = {version=  "0.19.0" }
 dirs = "4.0"
 bincode = "1.3.3"
-rayon = "1.6.1"
 num_cpus = "1.14.0"
 num-format = "0.4.4"
 human_bytes = { version = "0.4", default-features = false }
+tokio = { version = "1.25.0", features = ["full"] }
 
 [profile.release]
 lto = true
