--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,6 @@ tokio = { version = "1.25.0", features = ["full"] }
 
 
 [profile.release]
-lto = true
-codegen-units = 1
-panic = "abort"
+#lto = true
+#codegen-units = 1
+#panic = "abort"
