--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,12 @@ tokio = { version = "1.25.0", features = ["full"] }
 
 
 [profile.release]
-#lto = true
-#codegen-units = 1
-#panic = "abort"
+opt-level = 1
+debug = true
+debug-assertions = false
+overflow-checks = false
+lto = true
+panic = 'unwind'
+incremental = false
+codegen-units = 1
+rpath = false
