--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,13 @@ tokio = { version = "1.25.0", features = ["full"] }
 
 
 [profile.release]
-opt-level = 1
-debug = true
+opt-level = 3
+debug = false
 debug-assertions = false
 overflow-checks = false
 lto = true
-panic = 'unwind'
+panic = 'abort'
+strip = true
 incremental = false
 codegen-units = 1
 rpath = false
