--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
-#melt-rs = { path = "../melt-rs" }
+#melt-rs = { git ="https://github.com/jantb/melt-rs.git"}
+melt-rs = { path = "../melt-rs" }
 druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
@@ -21,11 +21,6 @@ bincode = "1.3.3"
 num_cpus = "1.14.0"
 num-format = "0.4.4"
 human_bytes = { version = "0.4", default-features = false }
-tokio = { version = "1.25.0", features = ["full"] }
-#kube = { version = "0.78.0", features = ["runtime", "derive"] }
-#k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
-#futures = "0.3.26"
-
 
 [profile.release]
 opt-level = 3
