--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bincode = "1.3.3"
 num_cpus = "1.14.0"
 num-format = "0.4.4"
 human_bytes = { version = "0.4", default-features = false }
+once_cell = "1.17.0"
 
 [profile.release]
 opt-level = 3
