--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ num_cpus = "1.14.0"
 num-format = "0.4.4"
 human_bytes = { version = "0.4", default-features = false }
 once_cell = "1.17.0"
+fnv = "1.0.7"
 
 [profile.release]
 opt-level = 3
