--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ num-format = "0.4.4"
 human_bytes = { version = "0.4", default-features = false }
 once_cell = "1.17.0"
 fnv = "1.0.7"
+kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls"] }
+k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
+tokio = {version= "1.25.0", features=["full"]}
+
 
 [profile.release]
 opt-level = 3
