--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ uuid = { version = "1.2.2", features = ["serde", "v4"] }
 clipboard = "0.5.0"
 crossbeam-channel = "0.5"
 jsonptr = "0.1.5"
-rocksdb = { version = "0.19.0" }
+rocksdb = { git ="https://github.com/rust-rocksdb/rust-rocksdb" }
 bincode = "1.3.3"
 num_cpus = "1.14.0"
 num-format = "0.4.4"
