--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ fnv = "1.0.7"
 kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls"] }
 k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
 tokio = {version= "1.25.0", features=["full"]}
+tokio-stream = "0.1.11"
 
 
 [profile.release]
