--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,5 @@ k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
 tokio = {version= "1.25.0", features=["full"]}
 tokio-stream = "0.1.11"
 rayon = "1.6.1"
+zstd = {version = "0.12.3+zstd.1.5.2",features = ["zdict_builder"]}
 
