--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,5 @@ tokio = {version= "1.25.0", features=["full"]}
 tokio-stream = "0.1.11"
 rayon = "1.6.1"
 zstd = {version = "0.12.3",features = ["zdict_builder"]}
+memchr = "2.5.0"
 
