--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 melt-rs = { git = "https://github.com/jantb/melt-rs.git" }
 #melt-rs = { path = "../melt-rs" }
-druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
+druid = { version = "0.8.2", features = ["im"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
